--- a/.github/workflows/bashtest.yml
+++ b/.github/workflows/bashtest.yml
@@ -27,4 +27,4 @@ jobs:
           echo "WEBDAV_LOGIN: $WEBDAV_LOGIN"
           echo "WEBDAV_PASSWORD: $WEBDAV_PASSWORD"
 
-          ./.github/workflows/bashtest.sh bluer_AMR
+          ./.github/workflows/bashtest.sh bluer_amr
